Updating cards to make the CSS easier to understand + added markup to support tiny DAM images + minor fix in the pulldown menu to avoid text wrapping on new lines

--- a/source/less/components/pulldown.less
+++ b/source/less/components/pulldown.less
@@ -65,6 +65,9 @@ nav.pulldown {
           display: block;
           font-size: 14*@px;
           padding: 10*@px;
+          text-overflow: ellipsis;
+          white-space: nowrap;
+          overflow: hidden;
 
           &[class^="icon-"].withLabel {
             padding-left: 10*@px;
