--- a/source/less/includes/variables.less
+++ b/source/less/includes/variables.less
@@ -279,6 +279,7 @@
 @card-board-header-background: rgb(170, 170, 170);
 @card-board-header-border: rgb(187, 187, 187);
 @card-board-preview-background: rgb(187, 187, 187);
+@card-asset-image-background: rgb(221, 221, 221);
 @card-grid-margin: 15*@px;
 
 
